--- a/css/responsive.css
+++ b/css/responsive.css
@@ -47,6 +47,10 @@
     align-items: flex-start;
     gap: 5px;
   }
+  
+  .image-gallery {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 @media (max-width: 480px) {
@@ -75,15 +79,14 @@
     font-size: 1.1rem;
   }
   
-  .language-toggle, .theme-toggle {
+  .theme-toggle {
     width: 40px;
     height: 40px;
     top: 15px;
     right: 15px;
   }
   
-  .theme-toggle {
-    top: 65px;
-    right: 15px;
+  .image-gallery {
+    grid-template-columns: 1fr;
   }
-}
+  }
